-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.5, 5.3.0 Alpha
-
None
-
Windows
-
16e686342a4c0a8a875ff24f3d5d9bea8a9512e6
If keydown event is being handled in java script code for example get the value '0' rather then '222'.
To reproduce the problem open attached webpage in Qt browser example and Press the apostrophe key in edit box and you get '0'.
Attached patch seems to fix the problem.
| For Gerrit Dashboard: QTBUG-37280 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 80082,1 | Set correct virtual keycode for the apostrophe key | stable | qt/qtwebkit | Status: MERGED | +2 | 0 |