Set correct virtual keycode for the apostrophe key

We currently set the virtual keycode to 0 for the apostrophe key, but
it should use the same keycode as double-quote.

Task-number: QTBUG-37280
Change-Id: Ic69c3f117c3f5f2ee3b5b1a77ce1c0b173c3a456
Reviewed-by: Michael Bruning <michael.bruning@digia.com>